kustomize/prometheus-operator/grafana-path.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: k8sfin-grafana
spec:
  template:
    spec:
      containers:
      - name: grafana
